# space_habitat_robotics_framework

./: LICENSE  README.md  dependencies.txt
shr_behavior_trees/: CMakeLists.txt  package.xml
shr_behavior_trees/bt_xml/: pick.xml  test.xml
shr_behavior_trees/include/: action_client_node_template.h  action_client_nodes.h
shr_behavior_trees/include/shr_behavior_trees/: action_nodes.h  condition_nodes.h
shr_behavior_trees/launch/: my_bt.launch
shr_behavior_trees/src/: behavior_tree_server.cpp  pick_bt_node.cpp  pick_bt_node.h  test_bt.cpp
shr_behavior_trees/src/nodes/: add_object_node.cpp  add_object_node.h  clear_octomap_node.cpp  clear_octomap_node.h  detach_object_node.cpp  detach_object_node.h  enable_camera_node.cpp  enable_camera_node.h  move_gripper_node.cpp  move_gripper_node.h  move_gripper_to_target_node.cpp  move_gripper_to_target_node.h  move_to_pose_node.cpp  move_to_pose_node.h  move_to_target_node.cpp  move_to_target_node.h  pick_node.cpp  pick_node.h  place_node.cpp  place_node.h  remove_object_node.cpp  remove_object_node.h  reset_node.cpp  reset_node.h  wait_node.cpp  wait_node.h
shr_http_server/: CMakeLists.txt  package.xml
shr_http_server/key/: cert.pem  key.pem  server.crt  server.csr  server.key  server.key.org
shr_http_server/launch/: bringup_arm.launch  http_server.launch  joy_control.launch  semi_automated_control.launch
shr_http_server/src/: control.py  http_server.py  manipulation_client.py  (+1 more)
shr_interfaces/: CMakeLists.txt  package.xml
shr_manipulation/: CMakeLists.txt  package.xml
shr_vision/: CMakeLists.txt  package.xml
(+31 files in other folders)
